<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        tools:text="@string/form_label"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/form_edit_text"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:hint="@string/form_edit_text"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:inputType="text"
        android:autofillHints="@string/form_edit_text" />

    <LinearLayout
        android:id="@+id/form_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="110dp"
            tools:text="@string/back_button" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            tools:text="@string/submit_button" />

    </LinearLayout>

</LinearLayout>