<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical">

    <TextView
        android:labelFor="@id/name_edit_text"
        android:id="@+id/name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:inputType="text"
        android:autofillHints="@string/name" />

    <TextView
        android:labelFor="@id/email_edit_text"
        android:id="@+id/email_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:inputType="textEmailAddress"
        android:autofillHints="@string/email" />

    <TextView
        android:id="@+id/password_text_view"
        android:labelFor="@id/pasword_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/pasword_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginVertical="16dp"
        android:autofillHints="@string/password" />

    <TextView
        android:id="@+id/confirm_password_text_view"
        android:labelFor="@id/confirm_pasword_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/confirm_pasword_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginVertical="16dp"
        android:autofillHints="@string/confirm_password" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginVertical="16dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/button_register_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Don't have account? Register Here"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

</LinearLayout>